# artificial_intelligence

./: .gitignore  pyproject.toml
AI_own/titanic_exercise/: titanic_TransfLearn.ipynb  titanic_sequential.ipynb
keras_basics/: Jugar_Keras_example_MLP_datos_best_model.ipynb  Keras_example_MLP.ipynb  Keras_example_MLP_datos.ipynb  Keras_example_MLP_datos_BN.ipynb  Keras_example_MLP_datos_CPU.ipynb  Keras_example_MLP_datos_Callback_early_stopping.ipynb  Keras_example_MLP_datos_Callback_history.ipynb  Keras_example_MLP_datos_Callback_inicializadores.ipynb  Keras_example_MLP_datos_Callback_no_inicializadores.ipynb  Keras_example_MLP_datos_Callback_no_regularizadores.ipynb  Keras_example_MLP_datos_Callback_regularizadores.ipynb  Keras_example_MLP_datos_GPU.ipynb  Keras_example_MLP_datos_TPU.ipynb  Keras_example_MLP_datos_dropout.ipynb  Keras_example_MLP_datos_guardar_leer.ipynb  Keras_example_MLP_datos_visualizaciones_simples.ipynb  Keras_example_MLP_leer_datos_Boston_housing.ipynb  Keras_example_MLP_leer_datos_CIFAR10.ipynb  Keras_example_MLP_leer_datos_CIFAR100.ipynb  Keras_example_MLP_leer_datos_IMDB.ipynb  Keras_example_MLP_leer_datos_Stock_Market.ipynb  Keras_example_MLP_minimo.ipynb  Keras_example_MLP_minimo_2.ipynb  Keras_example_MLP_minimo_Colab_save.ipynb  Keras_example_MLP_minimo_tf2.ipynb  Keras_example_talos.ipynb
ownAI/: DNN_manual_implementation.ipynb
ownAI/fastai_faces/: .~lock.trabajo_master_IA.doc#  OFFICIAL_CNN_1stage.ipynb  OFFICIAL_CNN_1stage_resnet50.ipynb  testing_CNN_1stage_resnet18.ipynb  testing_CNN_2stages_resnet50.ipynb  trabajo_master_IA.doc
(+8 files in other folders)
